[tool.poetry]
name = "mmle"
version = "1.0.0"
description = "Helper for machine learning"
authors = ["Keisuke Izumiya <izumiya.keisuke.24@gmail.com>"]
maintainers = ["Keisuke Izumiya <izumiya.keisuke.24@gmail.com>"]
license = "Apache-2.0"

readme = "README.rst"

repository = "https://github.com/izumiya-keisuke/mmle"

[tool.poetry.dependencies]
python = "^3.8"

tensorboard = "^2.4.1"

torch = {version = "^1.7.1", optional = true}
torchvision = {version = "^0.8.2", optional = true}

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[tool.poetry.extras]
pytorch = ["torch", "torchvision"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.venv
)/
'''

[tool.pylint.FORMAT]
max-line-length = 100
